small changes
- disable native wayland if `__GL_THREADED_OPTIMIZATIONS` is enabled
- update neoforge
- fix memory management
- remove unnecessary method